# FormalLanguagesTask1

./: .gitignore  .travis.yml  BuildRequirements.txt  CMakeLists.txt  LAutomata.cpp  LAutomata.h  LAutomataBuilder.cpp  README.md  Solver.cpp  Solver.h  TestAutomata.cpp  TestAutomata.h  TestSolver.cpp  cmake_test.cpp
include/: LAutomata.h  LAutomataBuilder.h
monitoring/: run.py
src/: LAutomata.cpp  LAutomataBuilder.cpp  Solver.cpp  nier_automata.cpp
test/: TestAutomata.cpp  TestSolver.cpp
